# CUebungsaufgaben

./: .editorconfig  .gitignore  AllgemeineFunktionen.c  AllgemeineFunktionen.h  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  Readme.md  main.c
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cmake.yml
Aufgaben/: Alternativen.c  Alternativen.h  Arrays.c  Arrays.h  EinUndAusgabe.c  EinUndAusgabe.h  Funktionen.c  Funktionen.h  Schleifen.c  Schleifen.h  SchleifenUndAlternativen.c  SchleifenUndAlternativen.h  Sortierverfahren.c  Structs.c  Structs.h
src/: AllgemeineFunktionen.c  AllgemeineFunktionen.h  main.c
src/Aufgaben/: Alternativen.c  Arrays.c  EinUndAusgabe.c  Funktionen.c  FunktionenAufgabe2.c  FunktionenAufgabe2.h  Pointer.c  Pointer.h  Schleifen.c  SchleifenUndAlternativen.c  Sortierverfahren.c  Sortierverfahren.h  Structs.c
