cmake_minimum_required(VERSION 3.15)
project(CUebungsaufgaben C)

set(CMAKE_C_STANDARD 99)

add_executable(CUebungsaufgaben main.c Aufgaben/EinUndAusgabe.c Aufgaben/EinUndAusgabe.h AllgemeineFunktionen.c AllgemeineFunktionen.h Aufgaben/Alternativen.c Aufgaben/Alternativen.h Aufgaben/Schleifen.c Aufgaben/Schleifen.h Aufgaben/SchleifenUndAlternativen.c Aufgaben/SchleifenUndAlternativen.h)